--- a/client/styles.css
+++ b/client/styles.css
@@ -81,12 +81,14 @@ textarea:not(:placeholder-shown)~label {
     resize: none;
     width: 100%;
     height: 100%;
-    border-radius: 1.5rem;
     padding: 1.0rem;
     font-size: 1.6rem;
     line-height: 1.6;
     outline: none;
     box-shadow: 0 0 20px 2px var(--primary);
+
+    border-radius: 1.5rem;
+    border: 2px solid var(--primary);
 }
 
 
