--- a/client/styles.css
+++ b/client/styles.css
@@ -46,6 +46,12 @@ body {
 
     width: min(80vw, 600px);
     height: min(50vh, 400px);
+
+    box-shadow: 0 0 20px 2px var(--primary);
+
+    border-radius: 1.5rem;
+    border: 2px solid var(--primary);
+    background-color: var(--white);
 }
 
 label {
@@ -79,20 +85,23 @@ textarea:not(:placeholder-shown)~label {
     opacity: 0;
 }
 
+#message-input-wrapper {
+    padding-bottom: calc(2rem + 40px);
+    height: 100%;
+}
+
 #message-input {
     resize: none;
+    overflow: auto;
     width: 100%;
     height: 100%;
     padding: 1.0rem;
     font-size: 1.6rem;
     line-height: 1.6;
+
+    background-color: transparent;
+    border: none;
     outline: none;
-    box-shadow: 0 0 20px 2px var(--primary);
-
-    border-radius: 1.5rem;
-    border: 2px solid var(--primary);
-
-    padding-bottom: calc(40px + 2rem);
 }
 
 
